fix bug 257079 crash in nsImapMailFolder::UpdateImapMailboxInfo. patched by robin.lu@sun.com r+sr=bienvenu